--- a/组件/date.html
+++ b/组件/date.html
@@ -171,7 +171,7 @@
       </tbody>
   </div> -->
 
-  <script src="http://apps.bdimg.com/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
   <script>
       
 
